fixed team tap on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -304,6 +304,11 @@ header {
     padding-left:0;
 }
 
+.img-responsive {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 // Button Styles
 .btn-default {
     @include button-variant($theme-dark, white, white);
